# serializer version: 1
# name: test_auth_expired_token
  dict({
    'detail': 'Tavern token has expired',
  })
# ---
# name: test_get_feed_not_found
  dict({
    'detail': 'Profile not found in discovery cache',
  })
# ---
# name: test_get_feed_success
  dict({
    'profiles': list([
      dict({
        'bio': None,
        'character_class': None,
        'display_name': 'Legolas',
        'gender': None,
        'image_urls': list([
        ]),
        'is_active': True,
        'profile_id': 'p2',
        'realm': None,
        'tagline': None,
        'talents': list([
        ]),
      }),
    ]),
  })
# ---
# name: test_get_feed_unauthorized_profile
  dict({
    'detail': 'Not authorized for this profile',
  })
# ---
# name: test_get_feed_with_filtering
  dict({
    'profiles': list([
      dict({
        'bio': None,
        'character_class': None,
        'display_name': 'Gimli',
        'gender': None,
        'image_urls': list([
        ]),
        'is_active': True,
        'profile_id': 'p3',
        'realm': None,
        'tagline': None,
        'talents': list([
        ]),
      }),
    ]),
  })
# ---
# name: test_get_match_success
  dict({
    'created_at': '2026-04-17T12:00:00+00:00',
    'id': 'match_p1_p2',
    'profiles': list([
      'p1',
      'p2',
    ]),
  })
# ---
# name: test_health
  dict({
    'service': 'discovery',
    'status': 'ok',
  })
# ---
# name: test_list_matches_for_profile_success
  list([
    dict({
      'created_at': '2026-04-17T12:00:00+00:00',
      'id': 'match_p1_p2',
      'profiles': list([
        'p1',
        'p2',
      ]),
    }),
  ])
# ---
# name: test_record_swipe_mutual_match
  dict({
    'created_at': '2026-04-17T12:00:00+00:00',
    'direction': 'right',
    'id': 'match_p1_p2',
    'swipe_id': 'fixed-swipe-id-for-snapshot',
    'swiped_profile_id': 'p2',
    'swiper_profile_id': 'p1',
  })
# ---
# name: test_record_swipe_self
  dict({
    'detail': 'Cannot swipe on your own profile.',
  })
# ---
# name: test_record_swipe_success
  dict({
    'created_at': '2026-04-17T12:00:00+00:00',
    'direction': 'right',
    'id': None,
    'swipe_id': 'fixed-swipe-id-for-snapshot',
    'swiped_profile_id': 'p2',
    'swiper_profile_id': 'p1',
  })
# ---
# name: test_record_swipe_validation_error
  dict({
    'body': dict({
      'direction': 'up',
      'swiper_profile_id': 'p1',
    }),
    'detail': list([
      dict({
        'input': dict({
          'direction': 'up',
          'swiper_profile_id': 'p1',
        }),
        'loc': list([
          'body',
          'swiped_profile_id',
        ]),
        'msg': 'Field required',
        'type': 'missing',
      }),
    ]),
  })
# ---
